--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=coffeeshop
 spring.datasource.url=jdbc:mysql://localhost:3306/coffeeshop
 spring.datasource.username=root
+spring.datasource.password=@Dung2472005
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
